# lexrpc

./: .gitignore  .readthedocs.yml  MANIFEST.in  README.md  pyproject.toml  setup.py
.circleci/: config.yml
docs/: build.sh  conf.py  index.rst  requirements.txt
docs/_templates/: layout.html
docs/source/: lexrpc.rst
examples/: atproto_client.py  atproto_server.py
lexrpc/: __init__.py  base.py  client.py  flask_server.py  server.py
lexrpc/lexicons/community/lexicon/bookmarks/: authManageBookmarks.json  authViewBookmarks.json  bookmark.json  getActorBookmarks.json
lexrpc/lexicons/community/lexicon/calendar/: event.json  rsvp.json
lexrpc/lexicons/community/lexicon/interaction/: README.md  like.json
lexrpc/lexicons/community/lexicon/location/: README.md  address.json  fsq.json  geo.json  hthree.json
lexrpc/lexicons/community/lexicon/payments/: README.md  webMonetization.json
lexrpc/lexicons/community/lexicon/preference/: README.md  ai.json
lexrpc/lexicons/site/standard/: authFull.json  authSocial.json  document.json  publication.json
lexrpc/lexicons/site/standard/graph/: recommend.json  subscription.json
lexrpc/lexicons/site/standard/theme/: basic.json  color.json
lexrpc/tests/: __init__.py  lexicons.py  schemas.py  test_base.py  test_client.py  test_flask_server.py  test_server.py  test_testdata.py
lexrpc/tests/testdata/: at-identifier_syntax_invalid.txt  cid_syntax_invalid.txt  datetime_syntax_invalid.txt  did_syntax_invalid.txt  record-data-invalid.json  record-data-valid.json  uri_syntax_invalid.txt
