# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[build-system]
requires = ['setuptools>=68.0']
build-backend = 'setuptools.build_meta'

# Getting these next two sections and MANIFEST.in just right so that they
# include the *.json files in lexrpc/lexicons/ but exclude other directories was
# a huge amount of pain. setuptools's support for pyproject.toml is confusing
# and immature. Be careful changing them!
[tool.setuptools.package-data]
'*' = ['*.json']

[tool.setuptools.packages.find]
include = ['lexrpc*']

[project.urls]
'Homepage' = 'https://github.com/snarfed/lexrpc'
'Documentation' = 'https://lexrpc.readthedocs.io/'

[project]
name = 'lexrpc'
version = '2.2'
authors = [
    { name='Ryan Barrett', email='lexrpc@ryanb.org' },
]
description = "Python implementation of AT Protocol's XRPC + Lexicon"
readme = 'README.md'
requires-python = '>=3.9'
keywords = ['XRPC', 'Lexicon', 'AT Protocol', 'ATP']
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: Public Domain',
    'Operating System :: OS Independent',
    'Intended Audience :: Developers',
    'Development Status :: 3 - Alpha',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

dependencies = [
    'dag-cbor>=0.3',
    'dag-json>=0.3',
    'grapheme>=0.6.0',
    'iterators>=0.2.0',
    'libipld>=3.0.0,<4.0.0',
    'multiformats>=0.3.1.post4',
    'requests>=2.0',
    'simple-websocket>=0.10.0',
]

[project.optional-dependencies]
flask = [
    'Flask>=2.0',
    'flask-sock>=0.6.0',
    'werkzeug>=2.0',
    'wsproto>=1.0',
]
docs = [
    'sphinx>=7.0.0',
    'sphinx-rtd-theme>=3.0.0',
]

[tool.uv.sources]
arroba =            { editable = true, path = "../arroba" }
brevity =           { editable = true, path = "../brevity" }
flask-gae-static =  { editable = true, path = "../flask-gae-static" }
lexrpc =            { editable = true, path = "../lexrpc" }
mf2util =           { editable = true, path = "../mf2util" }
oauth-dropins =     { editable = true, path = "../oauth-dropins" }
pywebutil =         { editable = true, path = "../webutil" }
secp256k1 =         { editable = true, path = "../secp256k1-py" }

[tool.uv.pip]
# this is in ~/.config/uv/uv.toml

[tool.deptry]
extend_exclude = ['build', 'dist', 'docs', 'examples']

[tool.deptry.per_rule_ignores]
# docs-only build tools, not imported in the codebase
DEP002 = [
    'sphinx',
    'sphinx-rtd-theme',
]
